<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/beige">

    <ImageView
        android:id="@+id/icResetPassword"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/resetpassword"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/reset_password_icon_desc"/>

    <TextView
        android:id="@+id/otpInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icResetPassword"
        android:layout_marginTop="20sp"
        android:text="@string/otp_instruction_text"
        android:gravity="center"
        android:textSize="23sp"
        android:fontFamily="@font/instrument_sans"/>

    <EditText
        android:id="@+id/edtOTP1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30sp"
        android:layout_marginStart="70dp"
        android:layout_below="@id/otpInstruction"
        android:background="@drawable/edt_otp"
        android:inputType="number"
        android:maxLength="1"
        android:gravity="center"
        android:textSize="30sp"
        android:importantForAutofill="yes"
        android:textStyle="bold"
        android:hint="@string/otp_digit_1"
        android:labelFor="@id/edtOTP1"
        android:accessibilityLiveRegion="polite"
        tools:ignore="HardcodedText"/>

    <EditText
        android:id="@+id/edtOTP2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30sp"
        android:layout_below="@id/otpInstruction"
        android:background="@drawable/edt_otp"
        android:inputType="number"
        android:maxLength="1"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_toEndOf="@id/edtOTP1"
        android:layout_marginStart="12dp"
        android:importantForAutofill="yes"
        android:textStyle="bold"
        android:hint="@string/otp_digit_2"
        android:labelFor="@id/edtOTP2"
        android:accessibilityLiveRegion="polite"
        tools:ignore="HardcodedText"/>

    <EditText
        android:id="@+id/edtOTP3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30sp"
        android:layout_below="@id/otpInstruction"
        android:background="@drawable/edt_otp"
        android:inputType="number"
        android:maxLength="1"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/edtOTP2"
        android:layout_marginStart="12dp" android:importantForAutofill="yes"
        android:hint="@string/otp_digit_3"
        android:labelFor="@id/edtOTP3"
        android:accessibilityLiveRegion="polite"
        tools:ignore="HardcodedText"
        />

    <EditText
        android:id="@+id/edtOTP4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30sp"
        android:layout_below="@id/otpInstruction"
        android:background="@drawable/edt_otp"
        android:inputType="number"
        android:maxLength="1"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_toEndOf="@id/edtOTP3"
        android:layout_marginStart="12dp"
        android:importantForAutofill="yes"
        android:textStyle="bold"
        android:hint="@string/otp_digit_4"
        android:labelFor="@id/edtOTP4"
        android:accessibilityLiveRegion="polite"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/OTPbtn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/edtOTP1"
        android:textSize="25sp"
        android:text="Submit"
        app:backgroundTint="@null"
        android:textColor="@color/skyblue"
        android:textStyle="bold"
        android:background="@drawable/otp_btnsubmit"/>

</RelativeLayout>